--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="titulo_perfil">Perfil</string>
     <string name="descri_o">Descrição</string>
     <string name="nome">Nome</string>
+    <string name="listaa">Lista</string>
 </resources>
